--- a/OFFICE/css/common.css
+++ b/OFFICE/css/common.css
@@ -29,26 +29,24 @@ div {
 ------------------------------ */
 
 /* タイトル部分 */
-#titlebox {
-    width: 100%;
-    margin: 0 auto 0 auto;
-    top: 0px;
-    height: 10em;
-    left: 0em;
-    position: fixed;
-    overflow: hidden;
-    background-color: rgb(217,222,228);
-    text-align: center;
+.titlebox {
+    top:0px;
+    height: 2.4em;
+    left:0em;
+    width:100%;
+    position:fixed;
+    overflow:hidden;
+    background-color:rgb(0,100,0);
+    text-align:center;
 }
 .titlebox_TEST {
     top: 0px;
     left: 0px;
     height: 2.4em;
-    width: 100px;
-    margin: 0 auto 0 auto;
+    width: 100%;
     position: fixed;
     overflow: hidden;
-    background-color: rgb(217,222,228);
+    background-color: rgb(255, 128, 255);
     text-align: center;
 }
 .titlebox_HONSHA {
@@ -58,15 +56,15 @@ div {
     width: 100%;
     position: fixed;
     overflow: hidden;
-    background-color: rgb(217,222,228);
+    background-color: rgb(255,69,0);
     text-align: center;
 }
 
 /* 条件画面 */
 .searchbox {
-    top: 2.4em;
-    bottom: 1.4em;
-    left:0em;
+    top: 3.4em;
+    bottom: 0.4em;
+    left:0.4em;
     width:100%;
     position:fixed;
     overflow:hidden;
@@ -81,7 +79,7 @@ div {
     width: 100%;
     position: fixed;
     overflow: hidden;
-    background-color: rgb(217,222,228);
+    background-color: rgb(220,230,240);
 }
 
 /* 実行画面 明細部 */
@@ -92,7 +90,7 @@ div {
     width: 100%;
     position: fixed;
     overflow: hidden;
-    background-color: rgb(237,237,237);
+    background-color: rgb(148,138,84);
 }
 
 /* 実行画面 ヘッダー部のみ */
@@ -108,24 +106,24 @@ div {
 
 /* 実行画面 明細部のみ */
 .detailboxOnly {
-    top: 2.4em;
+    top:2.4em;
     bottom: 1.4em;
-    left: 0em;
-    width: 100%;
-    position: fixed;
-    overflow: hidden;
-    background-color: rgb(237,237,237);
+    left:0em;
+    width:100%;
+    position:fixed;
+    overflow:hidden;
+    background-color:rgb(148,138,84);
 }
 
 /* フッター部 */
 .footerbox {
-    bottom: 0em;
-    height: 1.4em;
-    left: 0em;
-    width: 100%;
-    position: fixed;
-    overflow: hidden;
-    background-color: rgb(217,222,228);
+    bottom:0em;
+    height:1.4em;
+    left:0em;
+    width:100%;
+    position:fixed;
+    overflow:hidden;
+    background-color:darksalmon;
 }
 
 /* 左ボックス */
@@ -158,57 +156,57 @@ div {
 
 /* 画面ID */
 .WF_TITLEID {
-    height: 1em;
-    width: 18em;
-    overflow: hidden;
-    position: fixed;
-    left: 1em;
-    color: #2A3F54;
-    font-size: small;
-    vertical-align: middle;
-    text-align: left;
+    height:1em;
+    width:18em;
+    overflow:hidden;
+    position:fixed;
+    left:1em;
+    color:white;
+    font-size:small;
+    vertical-align:middle;
+    text-align:left;
 }
 
 /* 画面名称 */
 .WF_TITLETEXT {
-    height: 30px;
-    width: 80%;
-    position: fixed;
-    top: 3px;
-    left: 3em;
-    color: #2A3F54;
-    overflow: hidden;
-    font-size: x-large;
-    vertical-align: middle;
-    text-align: center;
+    height:30px;
+    width:45em;
+    position:fixed;
+    top:3px;
+    left:3em;
+    color:white;
+    overflow:hidden;
+    font-size:x-large;
+    vertical-align:middle;
+    text-align:center;
 }
 
 /* 会社名 */
 .WF_TITLECAMP {
-    height: 30px;
-    width: 18em;
-    overflow: hidden;
-    position: fixed;
-    top: 2px;
-    left: 82%;
-    color: #2A3F54;
-    font-size: small;
-    vertical-align: middle;
-    text-align: left;
+    height:30px;
+    width:18em;
+    overflow:hidden;
+    position:fixed;
+    top:2px;
+    left:83em;
+    color:white;
+    font-size:small;
+    vertical-align:middle;
+    text-align:left;
 }
 
 /* 現在日時 */
 .WF_TITLEDATE {
-    height: 15px;
-    width: 13em;
-    overflow: hidden;
-    position: fixed;
-    top: 18px;
-    left: 82%;
-    color: #2A3F54;
-    font-size: small;
-    vertical-align: middle;
-    text-align: left;
+    height:15px;
+    width:13em;
+    overflow:hidden;
+    position:fixed;
+    top:18px;
+    left:83em;
+    color:white;
+    font-size:small;
+    vertical-align:middle;
+    text-align:left;
 }
 
 /* 右ボックス表示 */
