--- a/JOTWEB/css/M00000.css
+++ b/JOTWEB/css/M00000.css
@@ -4,10 +4,7 @@
     width: 100%;
     position: fixed;
     left: 0em;
-    background: -moz-linear-gradient(65deg, rgba(40, 222, 132, 0.5), rgba(40, 103, 247, 0.8)),url(../img/tank2.png);
-    background: -webkit-linear-gradient(65deg, rgba(40, 222, 132, 0.5), rgba(40, 103, 247, 0.8)),url(../img/tank2.png);
-    background: linear-gradient(25deg, rgba(40, 222, 132, 0.5), rgba(40, 103, 247, 0.8)),url(../img/tank2.png);
-    background-size: cover;
+    background-color: rgb(220,230,240);
 }
 
 
@@ -131,6 +128,7 @@
 
 
 
+
 #OK {
     /* input要素全部に対して装飾 */
     background-image: linear-gradient(0deg, #F0F8FF, F8F8FF); /* グラデーション */
@@ -149,6 +147,7 @@
 }
 
 
+
     #OK:hover {
         /* マウスが上に載ったとき */
         background-image: linear-gradient(0deg, #B0C4DE, #B0C4DE);
@@ -162,7 +161,6 @@
         background-image: linear-gradient(180deg, #F8F8FF, #F8F8FF);
         border: 1px solid skyblue;
     }
-
 
 
 
@@ -196,5 +194,3 @@
     background: linear-gradient(to right, #ffb03c, #ff708d);
     color: #FFF;
 }
-
-
