--- a/JOTWEB/css/common.css
+++ b/JOTWEB/css/common.css
@@ -52,7 +52,7 @@ div {
     width: 100%;
     margin: 0 auto 0 auto;
     top: 0px;
-    height: 10em;
+    height: 6%;
     left: 0em;
     position: fixed;
     overflow: hidden;
