--- a/JOTWEB/OIL/OILMasterPage.Master
+++ b/JOTWEB/OIL/OILMasterPage.Master
@@ -48,6 +48,7 @@
             <asp:HiddenField ID="MF_MAP_ROLE" runat="server" />                 <%-- 更新権限ロール        --%>
             <asp:HiddenField ID="MF_VIEWPROF_ROLE" runat="server" />            <%-- 画面表示権限ロール    --%>
             <asp:HiddenField ID="MF_RPRTPROF_ROLE" runat="server" />            <%-- エクセル出力権限ロール--%>
+            <asp:HiddenField ID="MF_APPROVALID_ROLE" runat="server" />          <%-- 承認権限ロール        --%>
             <asp:HiddenField ID="MF_PROF_VIEW" runat="server" />                <%-- 画面プロフID          --%>
             <asp:HiddenField ID="MF_PROF_REPORT" runat="server" />              <%-- 帳票プロフID          --%>
             <asp:HiddenField ID="MF_USER_ORG" runat="server" />                 <%-- ユーザ所属部署        --%>
