--- a/JOTWEB/css/common.css
+++ b/JOTWEB/css/common.css
@@ -28,6 +28,7 @@ body {
     padding: 0;
     overflow: auto;
     font-size: 1.6em;
+    font-family: helvetica, arial, 'hiragino kaku gothic pro', meiryo, 'ms pgothic', sans-serif;
 }
 
 
