--- a/JOTWEB/OIL/css/OIT0002S.css
+++ b/JOTWEB/OIL/css/OIT0002S.css
@@ -7,7 +7,7 @@
     display: flex;
     border-radius: 0.1em;
     overflow: hidden;
-    border: 0.0625em solid #000000;
+    border: 0.0625em solid #b6b6b6;
 }
 
 .inline-radio div {
