--- a/JOTWEB/OIL/css/OIM0004C.css
+++ b/JOTWEB/OIL/css/OIM0004C.css
@@ -1,2 +1,19 @@
-﻿body {
+﻿/*左Boxオープン用虫眼鏡アイコン*/
+.BoxIcon {
+    background-image: url(../img/leftbox.png);
+    background-repeat: no-repeat;
+    background-position: 1px;
+}
+
+/*カレンダーオープン用アイコン*/
+.CalendarIcon {
+    background-image: url(../img/calendar.png);
+    background-repeat: no-repeat;
+    background-position: 1px;
+}
+
+
+/* 実行画面 ヘッダー部(詳細) */
+.detailboxOnly input[type='text'] {
+    padding-left: 1.3em;
 }
