--- a/JOTWEB/OIL/css/OIT0002S.css
+++ b/JOTWEB/OIL/css/OIT0002S.css
@@ -2,8 +2,10 @@
 /*空車発駅コード見出し*/
 #WF_DEPSTATION_LABEL {
     position: fixed;
-    top: 5em;
-    left: 40em;
+    height: 50px;
+    width: 70px;
+    top: calc(15% - 50px/2);
+    left: calc(43.5% - 70px/2);
     color: #737373;
     /*    font-weight:bold; 
     text-decoration:underline;*/
@@ -12,104 +14,119 @@
 /*空車発駅コードinput tag*/
 #WF_DEPSTATION {
     position: fixed;
-    top: 6.5em;
-    left: 40em;
-    border-radius: 3px;
-    padding-left: 21px;
-    height: 2em;
-    width: 10em;
+    height: 50px;
+    width: 140px;
+    top: calc(19% - 50px/2);
+    left: calc(46% - 140px/2);
 }
+
+    #WF_DEPSTATION input[type='text'] {
+        Height: 2.1em;
+        Width: 10em;
+    }
 
 /*空車発駅名称*/
 #WF_DEPSTATION_TEXT {
     position: fixed;
-    top: 6.8em;
-    left: 51em;
-    height: 2em;
-    width: 10em;
+    top: calc(20% - 50px/2);
+    left: calc(55% - 50px/2);
 }
 
 /*開始年月日見出し*/
 #WF_STYMD_LABEL {
     position: fixed;
-    top: 9.5em;
-    left: 40em;
+    height: 50px;
+    width: 70px;
+    top: calc(27% - 50px/2);
+    left: calc(43.5% - 70px/2);
     color: #737373;
 }
 
 /*開始年月日input tag*/
 #WF_STYMD {
     position: fixed;
-    top: 11em;
-    left: 40em;
-    border-radius: 3px;
-    padding-left: 21px;
-    height: 2em;
-    width: 10em;
+    height: 50px;
+    width: 140px;
+    top: calc(31% - 50px/2);
+    left: calc(46% - 140px/2);
 }
 
+    #WF_STYMD input[type='text'] {
+        Height: 2.1em;
+        Width: 10em;
+    }
 
 /*終了年月日見出し*/
 #WF_ENDYMD_LABEL {
     position: fixed;
-    top: 12.25em;
-    left: 40em;
+    height: 50px;
+    width: 70px;
+    top: calc(36% - 50px/2);
+    left: calc(43.5% - 70px/2);
     color: #737373;
 }
 
 /*終了年月日input tag*/
 #WF_ENDYMD {
     position: fixed;
-    top: 13.5em;
-    left: 40em;
-    border-radius: 3px;
-    padding-left: 21px;
-    height: 2em;
-    width: 10em;
+    height: 50px;
+    width: 140px;
+    top: calc(39% - 50px/2);
+    left: calc(46% - 140px/2);
 }
+
+    #WF_ENDYMD input[type='text'] {
+        Height: 2.1em;
+        Width: 10em;
+    }
 
 /*本線列車番号見出し*/
 #WF_TRAINNO_LABEL {
     position: fixed;
-    top: 16.5em;
-    left: 40em;
+    height: 50px;
+    width: 70px;
+    top: calc(48% - 50px/2);
+    left: calc(43.5% - 70px/2);
     color: #737373;
 }
 
 /*本線列車番号input tag*/
 #WF_TRAINNO {
     position: fixed;
-    top: 18em;
-    left: 40em;
-    border-radius: 3px;
-    padding-left: 21px;
-    height: 2em;
-    width: 10em;
+    height: 50px;
+    width: 140px;
+    top: calc(52% - 50px/2);
+    left: calc(46% - 140px/2);
 }
 
+    #WF_TRAINNO input[type='text'] {
+        Height: 2.1em;
+        Width: 10em;
+    }
 
 /*本線列車番号名称*/
 #WF_TRAINNO_TEXT {
     position: fixed;
-    top: 18.8em;
-    left: 51em;
-    height: 2em;
-    width: 10em;
+    top: calc(53% - 50px/2);
+    left: calc(55% - 140px/2);
 }
 
 /*ステータス見出し*/
 #WF_SW_LABEL {
     position: fixed;
-    top: 21.5em;
-    left: 40em;
+    height: 50px;
+    width: 140px;
+    top: calc(60% - 50px/2);
+    left: calc(43.5% - 70px/2);
     color: #737373;
 }
 
 /*ステータスボタン配置*/
 #checkbox {
     position: fixed;
-    top: 23em;
-    left: 40em;
+    height: 35px;
+    top: calc(64% - 50px/2);
+    left: calc(43.5% - 70px/2);
 }
 
 /*左Boxオープン用虫眼鏡アイコン*/
