--- a/JOTWEB/OIL/css/OIS0001S.css
+++ b/JOTWEB/OIL/css/OIS0001S.css
@@ -1,100 +1,112 @@
 ﻿/* ユーザーID検索画面*/
 /*会社コード見出し*/
 #WF_CAMPCODE_LABEL {
-    position:fixed; 
-    top:5em; 
-    left:30em; 
-    color:#737373;
-/*    font-weight:bold; 
-    text-decoration:underline;*/
+    position: fixed;
+    height: 50px;
+    width: 70px;
+    top: calc(15% - 50px/2);
+    left: calc(43.5% - 70px/2);
+    color: #737373;
 }
 
 /*会社コードinput tag*/
 #WF_CAMPCODE {
     position: fixed;
-    top: 6.5em;
-    left: 30em;
-    border-radius: 3px;
-    padding-left: 21px;
-    height: 2em;
-    width: 10em;
+    height: 50px;
+    width: 140px;
+    top: calc(19% - 50px/2);
+    left: calc(46% - 140px/2);
 }
+
+    #WF_CAMPCODE input[type='text'] {
+        Height: 2.1em;
+        Width: 10em;
+    }
 
 /*会社名称*/
 #WF_CAMPCODE_TEXT {
     position: fixed;
-    top: 6.8em;
-    left: 41em;
-    height: 2em;
-    width: 10em;
+    top: calc(20% - 50px/2);
+    left: calc(55% - 50px/2);
 }
 
 /*開始年月日見出し*/
 #WF_STYMD_LABEL {
     position: fixed;
-    top: 9.5em;
-    left: 30em;
+    height: 50px;
+    width: 70px;
+    top: calc(27% - 50px/2);
+    left: calc(43.5% - 70px/2);
     color: #737373;
 }
 
 /*開始年月日input tag*/
 #WF_STYMD {
     position: fixed;
-    top: 11em;
-    left: 30em;
-    border-radius: 3px;
-    padding-left: 21px;
-    height: 2em;
-    width: 10em;
+    height: 50px;
+    width: 140px;
+    top: calc(31% - 50px/2);
+    left: calc(46% - 140px/2);
 }
 
+    #WF_STYMD input[type='text'] {
+        Height: 2.1em;
+        Width: 10em;
+    }
 
 /*終了年月日見出し*/
 #WF_ENDYMD_LABEL {
     position: fixed;
-    top: 13.5em;
-    left: 30em;
+    height: 50px;
+    width: 70px;
+    top: calc(36% - 50px/2);
+    left: calc(43.5% - 70px/2);
     color: #737373;
 }
 
 /*終了年月日input tag*/
 #WF_ENDYMD {
     position: fixed;
-    top: 15em;
-    left: 30em;
-    border-radius: 3px;
-    padding-left: 21px;
-    height: 2em;
-    width: 10em;
+    height: 50px;
+    width: 140px;
+    top: calc(39% - 50px/2);
+    left: calc(46% - 140px/2);
 }
+
+    #WF_ENDYMD input[type='text'] {
+        Height: 2.1em;
+        Width: 10em;
+    }
 
 /*組織コード見出し*/
 #WF_ORG_LABEL {
     position: fixed;
-    top: 18em;
-    left: 30em;
+    height: 50px;
+    width: 70px;
+    top: calc(48% - 50px/2);
+    left: calc(43.5% - 70px/2);
     color: #737373;
 }
 
 /*組織コードinput tag*/
 #WF_ORG {
     position: fixed;
-    top: 19.5em;
-    left: 30em;
-    border-radius: 3px;
-    padding-left: 21px;
-    height: 2em;
-    width: 10em;
+    height: 50px;
+    width: 140px;
+    top: calc(52% - 50px/2);
+    left: calc(46% - 140px/2);
 }
 
+#WF_ORG input[type='text'] {
+    Height: 2.1em;
+    Width: 10em;
+}
 
 /*組織名称*/
 #WF_ORG_TEXT {
     position: fixed;
-    top: 19.8em;
-    left: 41em;
-    height: 2em;
-    width: 10em;
+    top: calc(53% - 50px/2);
+    left: calc(55% - 50px/2);
 }
 
 /*左Boxオープン用虫眼鏡アイコン*/
